
        [float]
        ===== Features

        [float]
        ===== Bug fixes

        [float]
        ===== Chores

2. When making a release, change the "==== Unreleased" section header to:

        [[release-notes-x.x.x]]
        ==== x.x.x - YYYY/MM/DD
////

[[release-notes-3.x]]
=== Node.js Agent version 3.x


==== Unreleased

[float]
===== Breaking changes

[float]
===== Features

* Add support for mysql2@3. Contributed by @firecow. ({pull}3301[#3301])

* Improve error handling with AWS Lambda. When used together with the
  https://github.com/elastic/apm-aws-lambda[Elastic AWS Lambda extension]
  v1.4.0 or greater, the APM agent will pre-register a partial transaction
  before the user's handler function is run. If the handler function fails
  with a Lambda timeout, `uncaughtException`, `unhandledRejection`, or crash
  then the Lambda extension will report the failed transaction so it can be
  seen in the Kibana APM app. ({pull}3285[#3285])

* Add OpenTelemetry Metrics API and Metrics SDK support. This is currently
  experimental and may change. With this change, you may use the OpenTelemetry
  Metrics API to create custom metrics and the APM agent will ship those
  metrics to APM server. As well, you may use the OpenTelemetry Metrics SDK
  and the APM agent will automatically add a MetricReader to ship metrics to
  APM server. See the <<opentelemetry-bridge>> for details. ({pull}3152[#3152])

[float]
===== Bug fixes

[float]
===== Chores


[[release-notes-3.45.0]]
==== 3.45.0 2023/04/28

[float]
===== Features

* Add `aws.s3.bucket` and `aws.s3.key` attributes for OpenTelemetry in S3 instrumentation.
  Spec https://github.com/open-telemetry/opentelemetry-specification/blob/v1.20.0/semantic_conventions/trace/instrumentation/aws-sdk.yml#L435
  ({issues}3150[#3150]).

[float]
===== Bug fixes

* Fix a possible crash in AWS Lambda Function instrumentation when an ELB-
  or API Gateway-triggered invocation received an `event` object with no