@@ -40,6 +40,13 @@ module.exports = function (fastify, agent, { version, enabled }) {
       next()
     })
 
+    agent.logger.debug('adding preHandler hook to fastify')
+    _fastify.addHook('preHandler', (req, reply, next) => {
+      // Save the parsed req body to be picked up by getContextFromRequest().
+      req.raw.body = req.body
+      next()
+    })
+
     agent.logger.debug('adding onError hook to fastify')
     _fastify.addHook('onError', (req, reply, err, next) => {
       agent.captureError(err, { request: req.raw })
@@ -60,6 +67,13 @@ module.exports = function (fastify, agent, { version, enabled }) {
       next()
     })
 
+    agent.logger.debug('adding preHandler hook to fastify')
+    _fastify.addHook('preHandler', (req, reply, next) => {
+      // Save the parsed req body to be picked up by getContextFromRequest().
+      req.raw.body = req.body
+      next()
+    })
+
     agent.logger.debug('adding onError hook to fastify')
     _fastify.addHook('onError', (req, reply, err, next) => {
       agent.captureError(err, { request: req.raw })
@@ -77,6 +91,13 @@ module.exports = function (fastify, agent, { version, enabled }) {
       const context = reply._context
       const name = req.method + ' ' + context.config.url
       agent._instrumentation.setDefaultTransactionName(name)
+      next()
+    })
+
+    agent.logger.debug('adding preHandler hook to fastify')
+    _fastify.addHook('preHandler', (req, reply, next) => {
+      // Save the parsed req body to be picked up by getContextFromRequest().
+      req.raw.body = req.body
       next()
     })
 
